# uefisettingdiff

./: .gitignore  Cargo.toml
src/: main.rs
