[package]
name = "uefisettingdiff"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = "full"
opt-level = 3

[dependencies]
serde_json = { version = "1.0.116", default-features = false, features = ["alloc"] }
ucs2 = "0.3.3"
uefi = { version = "0.28.0", features = ["alloc", "global_allocator"] }
serde = { version = "1.0.198", default-features = false, features = ["derive"] }
getargs = { version = "0.5.0", default-features = false }
log = "0.4.21"
